<resources>
    <string name="title_activity_main">MHF0.1c</string>

    <string name="spatch_select_dialog_cancel_button">Cancel</string>
    <string name="spatch_select_dialog_empty_device_button">N/A</string>
    <string name="default_id_text">---</string>
    <string name="not_available_text">___</string>
    <string name="lead_off_notification_message">You may lose electrode contact</string>
    <string name="one_mile_intro">1.6km를 심박수로 구분된 5개의 zone에 따라 속도가 조절되며 소요시간 등을 통해 당신의 심폐체력 및 CFI를 평가합니다.
        \n 완주 후에는 결과표가 출력되니 꼭 확인하세요!</string>
    <string name="hr_zone_intro">심박수 zone으로 구성된 protocol을 달릴 수 있습니다. 속도는 심박수에 의해 자동으로 조절되므로 당신은 달리는 것에만 집중 할 수 있습니다.</string>
    <string name="free_running_intro">심박수에 따른 zone  없이 원하는 속도나 경사를 설정하여 달릴 수 있습니다!</string>
    <string name="game_zone_intro">트레드밀을 이용하여 즐길 수 있는 다양한 게임이 준비되어 있습니다. 운동하기 싫을 때나 지루할 때 도전해 보세요!
        \n 혼자서도 가능하며 친구들과 함께 할 수도 있습니다.</string>
    <string name="speed">Speed\n(km/h)</string>
    <string name="vo2max">VO<sub>2</sub>max\n(kg/ml/min)</string>
    <string name="cfi_intro">꾸준한 운동을 통해 \n CFI 점수를 올려주세요!</string>
    <string name="custom_protocol_intro">1.6km zone test를 통해 평가된 당신의 심폐체력과 CFI에 적합한 프로토콜을 제시합니다. \n해당 프로토콜은 당신의 운동 후 설문에 따라 지속적으로 변하여 개인 맞춤형 운동을 제공합니다.</string>
    <string name="event_protocol_intro">당신의 맞춤형 포로토콜이 아닌 다른 프로토콜을 선택할 수 있습니다. \n당신에게 맞춘 프로토콜이 아니기 때문에 무리가 될 수 있으니 주의해주세요.</string>
    <string name="challenge_protocol_intro">당신의 한계를 시험할 수 있습니다. 매우 힘든 프로토콜이므로 도전하기 전에 충분한 준비운동을 하고 절대로 무리해서 진행해서는 안됩니다. 센서는 당신의 심박수를 감지하여 위험징후가 보이면 프로토콜을 자동으로 정지합니다.</string>
    <string name="survey_text">초급자 Ver.4 코스를 포기하셨습니다.\n어떤 부분이 많이 힘들었나요?</string>
    <string name="survey_text_finish">초급자 Ver.4 코스를 완주하셨습니다.\n프로토콜에 대한 간단한 설문이 제공되며 해당 답변에 따라\n프로토콜이 조절됩니다.\n\n(화면을 터치하세요)</string>
    <string name="survey_speed">속도는 어떠셨나요?</string>
    <string name="survey_incline">경사는 어떠셨나요?</string>
    <string name="survey_zone">Zone의 지속시간은 어떠셨나요?</string>
    <string name="survey_zone_bad">Zone의 지속시간 중 어떤 부분이 불편하셨나요?</string>
    <string name="survey_text_end">설문에 응해주셔서 감사합니다.\n\n(화면을 터치하세요)</string>
    <string name="survey_text_zone_duration">Zone\n지속시간</string>
    <string name="rest_3minutes">시작 전 설문조사 및 3분 안정시 심박수를 확인합니다.</string>
    <string name="rest_stop">수고하셨습니다.\n\n3분 휴식 시작~!</string>
    <string name="notice_signup">최대혈압 및 최저혈압과 체지방률을 모를 경우, 미입력</string>
    <string name="privacy">&lt;한양디지텍&gt;은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.
        \n\n &lt;한양디지텍&gt;은(는) 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.
        \n\n ○ 본 방침은 2019년 6월 21일부터 시행됩니다. \n\n 1. 개인정보의 처리 목적 &lt;한양디지텍&gt;은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
        \n\n 가. 홈페이지 회원가입 및 관리 \n회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 제한적 본인확인제 시행에 따른 본인확인, 서비스 부정이용 방지, 만14세 미만 아동 개인정보 수집 시 법정대리인 동의 여부 확인 등을 목적으로 개인정보를 처리합니다.
        \n\n 나. 재화 또는 서비스 제공
        \n 본인인증 등을 목적으로 개인정보를 처리합니다.
        \n 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.
        \n\n 2. 개인정보 파일 현황
        \n &#160;&#160;1) 개인정보 파일명 : Novel T
        \n &#160;&#160;&#160;&#160;- 개인정보 항목 : 휴대전화번호, 비밀번호, 이름, 성별, 생년월일, 키, 몸무게, 혈압, 체지방률, 지역, 지점
        \n &#160;&#160;&#160;&#160;- 수집방법 : 어플리케이션
        \n &#160;&#160;&#160;&#160;- 보유근거 : 회원제 이용에 따른 개인정보 수집
        \n &#160;&#160;&#160;&#160;- 보유기간 : 회원을 탈퇴한 경우 6개월 이후 삭제
        \n\n 3. 개인정보의 처리 및 보유 기간
        \n ① &lt;한양디지텍&gt;은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집시에 동의 받은 개인정보 보유,이용기간 내에서 개인정보를 처리,보유합니다.
        \n ② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다.
        \n &#160;&#160;1) &lt;홈페이지 회원가입 및 관리&gt;
        \n &#160;&#160;&#160;&#160;&lt;홈페이지 회원가입 및 관리&gt;와 관련한 개인정보는 수집.이용에 관한 동의일로부터&lt;준영구&gt;까지 위 이용목적을 위하여 보유.이용됩니다.
        \n &#160;&#160;&#160;&#160;&#160;&#160;-보유근거 : 회원제 이용에 따른 개인정보 수집
        \n\n 4. 개인정보처리 위탁
        \n ① &lt;한양디지텍&gt;은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
        \n ② 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.
        \n\n 5. 정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.
        \n ① 정보주체는 한양디지텍에 대해 언제든지 개인정보 열람,정정,삭제,처리정지 요구 등의 권리를 행사할 수 있습니다.
        \n ② 제1항에 따른 권리 행사는한양디지텍에 대해 개인정보 보호법 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 한양디지텍은(는) 이에 대해 지체 없이 조치하겠습니다.
        \n ③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다. 이 경우 개인정보 보호법 시행규칙 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다.
        \n ④ 개인정보 열람 및 처리정지 요구는 개인정보보호법 제35조 제5항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다.
        \n ⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다.
        \n ⑥ 한양디지텍은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다.
        \n\n 6. 처리하는 개인정보의 항목 작성
        \n ① &lt;한양디지텍&gt;은(는) 다음의 개인정보 항목을 처리하고 있습니다.
        \n &#160;&#160;&lt;홈페이지 회원가입 및 관리&gt;
        \n &#160;&#160;&#160;&#160;- 필수항목 : 휴대전화번호, 비밀번호, 이름, 성별, 키, 몸무게, 혈압, 체지방률, 지역, 지점, 서비스 이용 기록
        \n\n 7. 개인정보의 파기&lt;한양디지텍&gt;은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.
        \n &#160;&#160;-파기절차
        \n &#160;&#160;&#160;&#160;&#160;&#160;이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 \n &#160;&#160;&#160;&#160;&#160;&#160;혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.
        \n &#160;&#160;-파기기한
        \n &#160;&#160;&#160;&#160;&#160;&#160;이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 \n &#160;&#160;&#160;&#160;&#160;&#160;폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 \n &#160;&#160;&#160;&#160;&#160;&#160;파기합니다.
        \n &#160;&#160; -파기방법
        \n &#160;&#160;&#160;&#160;&#160;&#160;전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다.
        \n &#160;&#160;&#160;&#160;&#160;&#160;종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.
        \n\n 8. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항
        \n 한양디지텍 은 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키’를 사용하지 않습니다.
        \n\n 9. 개인정보 보호책임자 작성
        \n ① 한양디지텍(‘http://125.130.221.34’이하 ‘Novel T) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고 있습니다.
        \n ② 정보주체께서는 한양디지텍(‘http://125.130.221.34’이하 ‘Novel T) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 한양디지텍(‘http://125.130.221.34’이하 ‘Novel T) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
        \n\n 10. 개인정보 처리방침 변경
        \n ① 이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
        \n\n 11. 개인정보의 안전성 확보 조치 &lt;한양디지텍&gt;은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.
        \n &#160;&#160;1) 정기적인 자체 감사 실시
        \n &#160;&#160;&#160;&#160;개인정보 취급 관련 안정성 확보를 위해 정기적(분기 1회)으로 자체 감사를 실시하고 있습니다.
        \n &#160;&#160;2) 개인정보 취급 직원의 최소화 및 교육
        \n &#160;&#160;&#160;&#160;개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화 하여 개인정보를 관리하는 대책을 시행하고 있습니다.
        \n &#160;&#160;3) 내부관리계획의 수립 및 시행
        \n &#160;&#160;&#160;&#160;개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.
        \n &#160;&#160;4) 해킹 등에 대비한 기술적 대책
        \n &#160;&#160;&#160;&#160;&lt;한양디지텍&gt;은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 \n &#160;&#160;&#160;&#160;외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.
        \n &#160;&#160;5) 개인정보의 암호화
        \n &#160;&#160;&#160;&#160;이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 \n &#160;&#160;&#160;&#160;하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.
        \n &#160;&#160;6) 접속기록의 보관 및 위변조 방지
        \n &#160;&#160;&#160;&#160;개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 \n &#160;&#160;&#160;&#160;있습니다.
        \n &#160;&#160;7) 개인정보에 대한 접근 제한
        \n &#160;&#160;&#160;&#160;개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 \n &#160;&#160;&#160;&#160;있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.
        \n &#160;&#160;8) 문서보안을 위한 잠금장치 사용
        \n &#160;&#160;&#160;&#160;개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.
        \n &#160;&#160;9) 비인가자에 대한 출입 통제
        \n &#160;&#160;&#160;&#160;개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.</string>

</resources>
