<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_survey"
    android:id="@+id/layout_survey_custom_protocol"
    android:orientation="vertical" android:gravity="center">

    <TextView
        android:id="@+id/text_survey_notice"
        android:text="@string/survey_text_finish"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />

    <TextView
        android:id="@+id/text_survey_speed"
        android:text="@string/survey_speed"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_survey_speed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_survey_speed_slow"
            android:background="@drawable/btn_survey_speed_slow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_speed_good"
            android:background="@drawable/btn_survey_speed_good"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_speed_fast"
            android:background="@drawable/btn_survey_speed_fast"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_survey_incline"
        android:text="@string/survey_incline"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_survey_incline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_survey_incline_low"
            android:background="@drawable/btn_survey_incline_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_incline_good"
            android:background="@drawable/btn_survey_incline_good"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_incline_high"
            android:background="@drawable/btn_survey_incline_high"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_survey_zone"
        android:text="@string/survey_zone"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_marginBottom="80dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_survey_zone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_survey_zone_easy"
            android:background="@drawable/btn_survey_zone_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_zone_good"
            android:background="@drawable/btn_survey_zone_good"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_zone_bad"
            android:background="@drawable/btn_survey_zone_bad"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_survey_zone_bad"
        android:text="@string/survey_zone_bad"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:layout_marginBottom="80dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_survey_zone_bad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_survey_zone_bad_period"
            android:background="@drawable/btn_survey_zone_bad_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_zone_variance"
            android:background="@drawable/btn_survey_zone_bad_variance"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_survey_zone_simple"
            android:background="@drawable/btn_survey_zone_bad_simple"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_survey_notice_end"
        android:text="@string/survey_text_end"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>