<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    android:background="@drawable/background_main"
    tools:stateContext=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <TextView
            android:text="NovelT"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_time_main"
            android:textColor="@color/white"
            android:text="2019. 02. 12. PM 2:12"
            android:textSize="30sp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:background="@drawable/background_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="ID :"
                        android:textColor="#bebebe"
                        android:textSize="25sp"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_userid"
                        android:text="jaehyeok"
                        android:textSize="27sp"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="BAND :"
                        android:textColor="#bebebe"
                        android:textSize="20sp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/text_patch"
                        android:text="9150"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/indicator_connection"
                        android:src="@drawable/img_connect"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="-5dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/indicator_battery"
                        android:src="@drawable/battery_indicator_50p"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="-70dp"
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="wrap_content"
                        android:visibility="invisible" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_comments"
                android:text="안녕하세요."
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginTop="-70dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_connection"
                    android:background="@drawable/btn_main"
                    android:text="밴드 연결"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_history"
                    android:background="@drawable/btn_main"
                    android:text="history"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_setting"
                    android:background="@drawable/btn_main"
                    android:text="설 정"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_logout"
                    android:background="@drawable/btn_main"
                    android:text="로그아웃"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_1mile_test"
            android:background="@drawable/background_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="개인맞춤 체력검사"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/one_mile_intro"
                android:textColor="#bebebe"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:src="@drawable/img_report"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_hr_zone_protocol"
            android:background="@drawable/background_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="HR zone protocol"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/hr_zone_intro"
                android:textColor="#bebebe"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:src="@drawable/img_hr_zone_protocol"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_free_running"
            android:background="@drawable/background_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="Free running"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/free_running_intro"
                android:textColor="#bebebe"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:src="@drawable/img_free_running"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_game_zone"
            android:background="@drawable/background_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="Game zone"
                android:textColor="@color/white"
                android:textSize="27sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <TextView
                android:text="@string/game_zone_intro"
                android:textColor="#bebebe"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5" />

            <ImageView
                android:src="@drawable/img_game_zone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="Copyright 2019. Hanyang Digitech all rights reserved."
        android:textColor="#ffff00"
        android:textSize="13sp"
        android:gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>